# EzMath

./: .gitignore  CMakeLists.txt  README.md  binding.gyp  ezmath.cc  main.ts  manifest.json  package.json
cmake/: init_project.cmake  install_deps.cmake
src/: CMakeLists.txt
src/expression_tree/: CMakeLists.txt  bigint.cpp  exception.cpp  negation.cpp  number.cpp  power.cpp  product.cpp  sum.cpp  symbol.cpp
src/expression_tree/include/expression_tree/: bigint.hpp  exception.hpp  expression.hpp  factory.hpp  hash_utils.hpp  negation.hpp  number.hpp  power.hpp  product.hpp  sum.hpp  symbol.hpp
src/ezmath/: CMakeLists.txt
src/parsing/: CMakeLists.txt  commands.cpp  exception.cpp  lexer.cpp  parser.cpp
src/parsing/include/parsing/: exception.hpp  lexer.hpp  parser.hpp  token.hpp  token_utils.hpp
src/tree/: CMakeLists.txt  bigint.cpp  exception.cpp  negation.cpp  number.cpp  power.cpp  product.cpp  sum.cpp  symbol.cpp
src/tree/include/tree/: bigint.hpp  exception.hpp  expression.hpp  factory.hpp  hash_utils.hpp  math.hpp  negation.hpp  number.hpp  power.hpp  product.hpp  sum.hpp  symbol.hpp
test/: CMakeLists.txt  expressions_test.cpp  lexer_test.cpp  parser_test.cpp
